Fix document strategy XML building for V4.4 fields
Update all five document strategies to pass newly parsed fields through to the XML generation.